--- a/custom/conf/app.example.ini
+++ b/custom/conf/app.example.ini
@@ -515,6 +515,20 @@ ROUTER = console
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;;
+;; Authorization Logger -  Logs whenever a user given authorisation for a perticuliar repo 
+;;
+;; ENABLE_AUTHORIZATION_LOG = false
+;;
+;; Set the log "modes" for the access log (if file is set the log file will default to authorization.log)
+;; AUTHORIZATION_LOG_MODE = file
+;;
+;; Sets the template used to create the access log.
+;; AUTHORIZATION_LOG_TEMPLATE = {{Granter}} - {{Grantee}} {{Time "[02/Jan/2006:15:04:05 -0700]" }} "{{AccessType}} {{RepoURI}} "
+;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;
 ;; Access Logger (Creates log in NCSA common log format)
 ;;
 ;ENABLE_ACCESS_LOG = false
